--- a/web/css/main.css
+++ b/web/css/main.css
@@ -4,10 +4,22 @@
   -moz-box-shadow: 0 0 20px rgba(0, 0, 0, 0.8);
 }
 .homeBackground {
-  background-color: rgba(255, 141, 135, 0.7) !important;
+  background-color: rgba(255, 141, 135, 0.5) !important;
 }
 .awayBackground {
-  background-color: rgba(187, 187, 255, 0.7) !important;
+  background-color: rgba(187, 187, 255, 0.5) !important;
+}
+#main-header,
+section {
+  padding: 6px 0 6px 0;
+  width: 98%;
+  background-color: rgba(255, 255, 255, 0.4);
+  margin: 0 auto !important;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  -ms-border-radius: 5px;
+  -o-border-radius: 5px;
+  border-radius: 5px;
 }
 @media (max-width: 480px) {
   #inner-wrapper {
@@ -19,11 +31,6 @@
     width: 500px;
   }
 }
-#main-header {
-  width: 99%;
-  background-color: rgba(255, 255, 255, 0.4);
-  margin: 0 auto !important;
-}
 #inner-wrapper {
   background-image: url("../../img/Grass_Background.jpg");
   background-repeat: no-repeat;
@@ -34,15 +41,10 @@
 .small-padding {
   height: 12px;
 }
+.large-padding {
+  height: 24px;
+}
 .table-centered {
   margin: 0 auto !important;
   float: none !important;
-}
-input::-webkit-input-placeholder,
-textarea::-webkit-input-placeholder {
-  color: #555555;
-}
-input:-moz-placeholder,
-textarea:-moz-placeholder {
-  color: #555555;
 }
