--- a/keeper/src/main/webapp/css/less/main.less
+++ b/keeper/src/main/webapp/css/less/main.less
@@ -23,6 +23,10 @@
   .box-shadow(0 0 20px, 80%)
 }
 
+.winner {
+  font-weight: bold;
+}
+
 .homeBackground {
   background-color: fadeout(@home, 50%) !important;
 }
